5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1785_1595.log
== TEST (2019-05-30 11:08:34) 
-- CODE:
from numpy import*
n=array(eval(input("x: ")))

i=0
while(i<size(n)):
	i+=1

print(round(sum(n)/size(n),2)
-- ERROR:
File "XXXX", line 9
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:08:42) 
-- CODE:
from numpy import*
n=array(eval(input("x: ")))

i=0
while(i<size(n)):
	i+=1

print(round(sum(n)/size(n),2)
-- ERROR:
File "XXXX", line 9
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:24:03) 
-- CODE:
from numpy import*
n=array(eval(input("x: ")))

i=0

print(round(sum(n)/size(n)-min(n),2)
-- ERROR:
File "XXXX", line 7
    
                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:24:10) 
-- CODE:
from numpy import*
n=array(eval(input("x: ")))

i=0

print(round(sum(n)/size(n)-min(n), 2)
-- ERROR:
File "XXXX", line 7
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:24:23) 
-- CODE:
from numpy import*
n=array(eval(input("x: ")))

i=0

print(round(sum(n)/size(n)-min(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:24:52) 
-- CODE:
from numpy import*
n=float(input("x: "))

i=0

print(round(sum(n)/size(n)-min(n), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:26:02) 
-- CODE:
from numpy import*
n=float(input("x: "))

i=0

while(i<size(n)):
	n=sum(n/size(n))
	i+=1

print(round(n, 2)
-- ERROR:
File "XXXX", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:26:08) 
-- CODE:
from numpy import*
n=float(input("x: "))

i=0

while(i<size(n)):
	n=sum(n/size(n))
	i+=1

print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:28:02) 
-- CODE:
from numpy import*
n=float(input("x: "))

i=0

while(i<size(n)):
	n=sum(n)/size(n)
	i+=1

print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:28:17) 
-- CODE:
from numpy import*
n=float(input("x: "))

i=0

while(i<size(n)):
	n=sum(n)/size(n)*i
	i+=1

print(round(n, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:31:43) 
-- CODE:
from numpy import*
n=float(input("x: "))

i=0

while(i<size(n)):
	i+=1

print(round(sum(n)/size(n)-min(n),2)
-- ERROR:
File "XXXX", line 10
    
                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:34:57) 
-- CODE:
from numpy import*
n=float(input("x: "))

i=0
soma=0

while(i<size(n)):
	n=n
	soma+=1
	i+=1

print(round(sum(n)/size(n)-min(n),2)
-- ERROR:
File "XXXX", line 13
    
                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:49) 
-- CODE:
from numpy import*
n=float(input("x: "))

i=0
soma=0

while(i<size(n)):
	n=sum(n)/size(n)-min(n)
	soma+=1
	i+=1

print(round(n,2)
-- ERROR:
File "XXXX", line 13
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:54) 
-- CODE:
from numpy import*
n=float(input("x: "))

i=0
soma=0

while(i<size(n)):
	n=sum(n)/size(n)-min(n)
	soma+=1
	i+=1

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:26) 
-- CODE:
from numpy import*
n=float(input("x: "))

i=0
soma=0

while(i<size(n)):
	z=sum(n)/size(n)
	n=z-min(n)
	soma+=1
	i+=1

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:39:00) 
-- CODE:
from numpy import*
n=array(eval(input("x: ")))

i=0
soma=0

while(i<size(n)):
	n=sum(n)/size(n)
	
	soma+=1
	i+=1

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
